--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "build": "^0.1.4",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "localStorage": "^1.0.4",
+    "store": "^2.0.12"
   },
   "engines": {
     "node": "10.x"
