--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Joel, Will, Erick",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "build": "^0.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
